# flax-crm

./: .env.example  .eslintrc  .gitignore  .sequelizerc  Cargo.toml  Dockerfile  README.md  app.yaml  babel.config.json  docker-compose.yml  jest.browser.config.js  node-loader.config.js  package.json  pnpm-lock.yaml  postcss-module.config.js  postcss-vanilla.config.js  tailwind.config.cjs  tsconfig.json  webpack-manifest.json  webpack.config.cjs  webpack.config.js
.github/workflows/: build_and_deploy.yml
.husky/: pre-commit
backend/: ApiNotFound.ts  DB.ts  RouteImports.ts  Router.ts  Server.ts
backend/Auth/: Auth.ts  ResetPassword.ts
backend/Fields/: BatchPostFields.ts  GetNounFields.ts
backend/Health/: Health.ts
backend/IntakeForms/: GetIntakeForms.ts
backend/Nouns/: DeleteNouns.ts  GetNouns.ts  PatchNouns.ts  PostNouns.ts
backend/Users/: Users.ts
backend/Utils/: EmailUtils.ts  EndpointResponses.ts  JWTUtils.ts
backend/WebApp/: RenderWebApp.ts  WebApp.ts
backend/auth/: Auth.ts
backend/nouns/: DeleteNouns.ts  GetNouns.ts  PatchNouns.ts  PostNouns.ts
backend/users/: FindOrCreateLocalUser.ts  Users.ts
config/: config.json
frontend/: App.tsx  entry.tsx
frontend/Auth/: FinishResetPassword.tsx  Login.module.css  Login.tsx  ResetPassword.tsx  ResetPasswordEmailSent.tsx
frontend/Nouns/: CreateEditIntakeForm.test.tsx  CreateNoun.tsx  (+5 more)
migrations/: 20210515174947-create-noun.cjs  20210527011249-create-field.cjs  20210720144838-create-user.cjs
models/: defaults.d.ts  field.cjs  field.d.ts  index.cjs  noun.cjs  noun.d.ts  user.cjs
src/: main.rs
(+51 files in other folders)
